Fixed schedule header on mobile

--- a/styles/index.css
+++ b/styles/index.css
@@ -566,7 +566,7 @@
     background-size: contain;
   }
   .schedule-header {
-    height: 30vh;
+    height: 35vh;
     background-size: contain;
   }
   .announcements-header {
